--- a/static/form.css
+++ b/static/form.css
@@ -23,7 +23,7 @@ body {
   border-top: 10px solid #f45702;
 }
 
-label, input, textarea {
+label, input {
   display: block;
   width: 100%;
   font-size: 12pt;
@@ -43,16 +43,7 @@ h3 {
   margin: 0 0 0.5em 0;
 }
 
-span {
-  font-size: 8pt;
-}
-
-em {
-  color: #f45702;
-  font-weight: bold;
-}
-
-input, textarea {
+input {
   border: none;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 2px;
@@ -61,12 +52,8 @@ input, textarea {
   outline: none;
 }
 
-input:focus, textarea:focus {
+input:focus {
   border: 1px solid #6bd4b1;
-}
-
-textarea {
-  resize: none;
 }
 
 button {
@@ -95,10 +82,7 @@ button:hover {
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus {
+input:-webkit-autofill:focus {
   border: 1px solid #6bd4b1;
   -webkit-text-fill-color: #2A293E;
   -webkit-box-shadow: 0 0 0px 1000px #f8f4e5 inset;
